--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Staatliches&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2>Tienda Virtual</h2>
-    <p>En construcción</p>
+    <header>
+        <h1>Mi Tienda Virtual</h1>
+        <nav>
+            <ul>
+                <li><a href="#productos">Productos</a></li>
+                <li><a href="#carrito">Carrito</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="productos">
+        <h2>Productos Disponibles</h2>
+        <div class="producto">
+            <img src="producto1.jpg" alt="Producto 1">
+            <h3>Producto 1</h3>
+            <p>Descripción breve del producto 1.</p>
+            <p>Precio: $10.00</p>
+            <button>Añadir al Carrito</button>
+        </div>
+        <!-- Más productos -->
+    </section>
+    <footer>
+        <p>&copy; 2023 Mi Tienda Virtual. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
