--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="productos">
         <h2>Productos Disponibles</h2>
         <div class="producto">
-            <img src="producto1.jpg" alt="Producto 1">
+            <img src="img/producto.jpg" alt="Producto 1">
             <h3>Producto 1</h3>
             <p>Descripción breve del producto 1.</p>
             <p>Precio: $10.00</p>
