--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
         <div class="producto">
             <img src="img/producto.jpg" alt="Producto 1">
             <h3>Producto 1</h3>
-            <p>Descripción breve del producto 1.</p>
+            <p id="descripcion">Descripción breve del producto 1.</p>
             <p>Precio: $10.00</p>
-            <button>Añadir al Carrito</button>
+            <button id="agregar">Añadir al Carrito</button>
         </div>
         <!-- Más productos -->
     </section>
     <footer>
-        <p>&copy; 2023 Mi Tienda Virtual. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Mi Tienda Virtual. Todos los derechos reservados.</p>
     </footer>
+
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
