--- a/index.html
+++ b/index.html
@@ -11,31 +11,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Staatliches&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--etiquetas html-->
     <header>
-        <h1>Mi Tienda Virtual</h1>
-        <nav>
-            <ul>
-                <li><a href="#productos">Productos</a></li>
-                <li><a href="#carrito">Carrito</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
+        <a href="index.html">
+            <img src="img/logo.png" alt="Logotipo">
+        </a>
     </header>
-    <section id="productos">
-        <h2>Productos Disponibles</h2>
-        <div class="producto">
-            <img src="img/producto.jpg" alt="Producto 1">
-            <h3>Producto 1</h3>
-            <p id="descripcion">Descripción breve del producto 1.</p>
-            <p>Precio: $10.00</p>
-            <button id="agregar">Añadir al Carrito</button>
-        </div>
-        <!-- Más productos -->
-    </section>
-    <footer>
-        <p>&copy; 2025 Mi Tienda Virtual. Todos los derechos reservados.</p>
-    </footer>
 
+    <nav>
+        <a href="#">Tienda</a>
+        <a href="#">Nosotros</a>
+    </nav>
+   
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
