--- a/nosotros.html
+++ b/nosotros.html
@@ -19,19 +19,12 @@
     </header>
 
     <nav class="navegacion">
-        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
-        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+        <a class="navegacion__enlace" href="index.html">Tienda</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="nosotros.html">Nosotros</a>
     </nav>
 
     <main class="contenedor">
-        <h1>Nuestros productos</h1>
-        <div class="grid">
-            <div class="producto">
-                <a href="productos.html">
-                    <img src="img/1.jpg" alt="imagen camisa">
-                </a>
-            </div>
-        </div>
+        <h1>Nosotros</h1>
     </main>
 
    <footer class="footer">
