--- a/index.html
+++ b/index.html
@@ -29,9 +29,121 @@
         <div class="grid">
             <div class="producto">
                 <a href="productos.html">
-                    <img src="img/1.jpg" alt="imagen camisa">
+                    <img class="producto__imagen" src="img/1.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Vuejs</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
                 </a>
-            </div>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/2.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Angular</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/3.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">React</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/4.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Redux</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/5.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Nodejs</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/6.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">SASS</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/7.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">HTML5</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/8.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Github</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/9.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">BulmaCSS</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/10.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">TypeScript</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/11.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Drupal</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/13.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">GraphQL</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/14.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Wordpress</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
         </div>
     </main>
 
