--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
             </div><!--Fin de la clase producto-->
             <div class="producto">
                 <a href="productos.html">
+                    <img class="producto__imagen" src="img/12.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">javascript</p>
+                        <p class="producto__precio">25$</p>
+                    </div>
+                </a>
+            </div><!--Fin de la clase producto-->
+            <div class="producto">
+                <a href="productos.html">
                     <img class="producto__imagen" src="img/13.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
                         <p class="producto__nombre">GraphQL</p>
@@ -144,6 +153,10 @@
                     </div>
                 </a>
             </div><!--Fin de la clase producto-->
+             
+            <div class="grafico grafico--camisas"></div>
+            <div class="grafico grafico--node"></div>
+
         </div>
     </main>
 
