--- a/nosotros.html
+++ b/nosotros.html
@@ -25,7 +25,45 @@
 
     <main class="contenedor">
         <h1>Nosotros</h1>
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis elit nisi, venenatis ac semper eget, facilisis in dui. Vivamus tincidunt ac risus a luctus. Aenean finibus nec libero vel dictum. Phasellus lobortis nisi et lectus congue, sed eleifend nisi ultricies. In semper, augue id gravida fermentum, neque purus rutrum velit, at tempor ante arcu sit amet libero. In semper ipsum ac volutpat iaculis. Curabitur dictum finibus tincidunt.  pellentesque.</p> 
+                <p>In tempus metus et augue sodales, sit amet iaculis ipsum aliquam. Nam id velit vel nulla interdum consequat. Suspendisse massa ligula, pellentesque id eleifend vel, iaculis in, aliquet ultrices eros. Sed ullamcorper tempor tellus at aliquam.</p>
+                
+            </div>
+            <img class="nosotros__imagen" src="/img/nosotros.jpg" alt="nosotros">
+        </div>
+        
     </main>
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">¿Por qué comprar nuestros productos?</h2>
+
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="porque comprar">
+                <h3 class="bloque__titulo">El mejor Precio</h3>
+                <p>Suspendisse massa ligula, pellentesque id eleifend vel, iaculis in, aliquet ultrices eros.</p>
+            </div><!--bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="porque comprar">
+                <h3 class="bloque__titulo">Para devs</h3>
+                <p>Suspendisse massa ligula, pellentesque id eleifend vel, iaculis in, aliquet ultrices eros.</p>
+            </div><!--bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="porque comprar">
+                <h3 class="bloque__titulo">Envío gratis</h3>
+                <p>Suspendisse massa ligula, pellentesque id eleifend vel, iaculis in, aliquet ultrices eros.</p>
+            </div><!--bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="porque comprar">
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+                <p>Suspendisse massa ligula, pellentesque id eleifend vel, iaculis in, aliquet ultrices eros.</p>
+            </div><!--bloque-->
+        </div><!--bloque-->
+    </section>
 
    <footer class="footer">
     <p class="footer__texto">Front End Store -  Todos los derechos reservados 2025</p>
