--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
         <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     </nav>
-     <a class="header" style="color:azure"; id="downloadLink" href="video/guemes.mp4" download="video/guemes.mp4">
+     <!-- <a class="header" style="color:azure"; id="downloadLink" href="video/guemes.mp4" download="video/guemes.mp4">
         Descargar Video
-    </a>
+    </a> -->
     <main class="contenedor">
         <h1>Nuestros productos</h1>
         <div class="grid">
